cluster/core/kube-system/cilium/resources/cilium-gateway.yaml
# apiVersion: gateway.networking.k8s.io/v1
# kind: GatewayClass
# metadata:
#   name: cilium
# spec:
#   controllerName: io.cilium/gateway-controller
# ---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
  namespace: cilium-ingress
  annotations:
    io.cilium/ip-pool: default-load-balancer-ip-pool
    # This matches the VIP defined in your networking.md
    # io.cilium/lb-ipam-ips: 192.168.3.51
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-prod"
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.rockyroad.rocks"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wild-rockyroad-rocks-tls
      allowedRoutes:
        namespaces:
          from: All
